# RoboticsEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  mainwindow.cpp  mainwindow.h
dualpendulum/: dualcontroller.cpp  dualcontroller.h  dualdynamics.cpp  dualdynamics.h  dualpendulum.cpp  dualpendulum.h  kinematics.cpp
kinematics/: varibles.h
kinematics/forward/: dualpenkin.h
